Fix alignment of the message's actor name element in the foundry client

--- a/src/styles/ui/sidebar/chat/_index.scss
+++ b/src/styles/ui/sidebar/chat/_index.scss
@@ -36,13 +36,13 @@
 
         h4.message-sender {
             grid-area: name;
-            align-content: end;
             color: var(--color-text-dark-primary);
             line-height: 1;
             font-size: var(--font-size-15);
             font-weight: 500;
-            text-overflow: ellipsis;
+            margin-top: auto;
             overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .user {
